--- a/src/html/chat/index.html
+++ b/src/html/chat/index.html
@@ -57,6 +57,13 @@
             </div>
             <div class="msg-block__ava"></div>
         </div>
+        <div class="msg-block msg-block__answer">
+            <div class="msg-block__content">
+                <div class="msg-block__text">Hi Andrea! How are you?</div>
+                <div class="msg-block__time">12 minutes ago</div>
+            </div>
+            <div class="msg-block__ava"></div>
+        </div>
     </template>
 </main>
 </body>
