Add auth and Fix

--- a/src/html/chat/index.html
+++ b/src/html/chat/index.html
@@ -17,26 +17,27 @@
                 <div class="chat__title">Test task</div>
                 <div class="chat__dot-menu">
                     <ul class="dot-menu">
-                        <li class="dot-menu__item"><a href="/">Log out</a></li>
+                        <li class="dot-menu__item">Clear history</li>
+                        <li class="dot-menu__item">Log out</li>
                     </ul>
                 </div>
             </nav>
             <section class="msg-block__wrap">
-                <div class="time__line">TODAY AT 10:45AM</div>
-                <div class="msg-block msg-block_you">
-                    <div class="msg-block__content">
-                        <div class="msg-block__text">Doing good, how do you feel about grabbing a coffee sometime?</div>
-                        <div class="msg-block__time">5 minutes ago</div>
-                    </div>
-                    <div class="msg-block__ava"></div>
-                </div>
-                <div class="msg-block msg-block__answer">
-                    <div class="msg-block__content">
-                        <div class="msg-block__text">Hi Andrea! How are you?</div>
-                        <div class="msg-block__time">12 minutes ago</div>
-                    </div>
-                    <div class="msg-block__ava"></div>
-                </div>
+                <div class="time__line" style="visibility: hidden;">TODAY AT </div>
+                <!--<div class="msg-block msg-block_you">-->
+                    <!--<div class="msg-block__content">-->
+                        <!--<div class="msg-block__text">Doing good, how do you feel about grabbing a coffee sometime?</div>-->
+                        <!--<div class="msg-block__time">5 minutes ago</div>-->
+                    <!--</div>-->
+                    <!--<div class="msg-block__ava"></div>-->
+                <!--</div>-->
+                <!--<div class="msg-block msg-block__answer">-->
+                    <!--<div class="msg-block__content">-->
+                        <!--<div class="msg-block__text">Hi Andrea! How are you?</div>-->
+                        <!--<div class="msg-block__time">12 minutes ago</div>-->
+                    <!--</div>-->
+                    <!--<div class="msg-block__ava"></div>-->
+                <!--</div>-->
             </section>
             <footer class="send-msg">
                 <div class="send-msg__form">
@@ -67,5 +68,6 @@
     </template>
 </main>
 </body>
-<script src="../js/all.js"></script>
+<script src="../js/_userConnect.js"></script>
+<script src="../js/chat_all.js"></script>
 </html>
