--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <main class="container">
-    <section class="mobile__wrap">
+    <section class="mobile__wrap mobile__wrap-auth">
         <div class="mobile__content">
             <div class="auth__top">
                 <div class="auth__top-logo">
@@ -42,5 +42,6 @@
     </section>
 </main>
 </body>
-<script src="js/all.js"></script>
+<script src="js/_userConnect.js"></script>
+<script src="js/auth_all.js"></script>
 </html>
